<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.parkinncharge.parkinncharge.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/public_place_parking"
        android:name="com.parkinncharge.parkinncharge.ui.pub_park.public_parking"
        android:label="@string/public_place_parking"
        tools:layout="@layout/public_parking" />

    <fragment
        android:id="@+id/current_booking"
        android:name="com.parkinncharge.parkinncharge.ui.booking.current_booking"
        android:label="Current Booking"
        tools:layout="@layout/current_booking" />

    <fragment
        android:id="@+id/payment"
        android:name="com.parkinncharge.parkinncharge.ui.payment.payments"
        android:label="@string/payment"
        tools:layout="@layout/payments" />

    <fragment
        android:id="@+id/history"
        android:name="com.parkinncharge.parkinncharge.ui.history.history"
        android:label="@string/history"
        tools:layout="@layout/history" />

    <fragment
        android:id="@+id/refer_and_earn"
        android:name="com.parkinncharge.parkinncharge.ui.share.ShareFragment"
        android:label="@string/refer_and_earn"
        tools:layout="@layout/fragment_share" />
</navigation>